<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/large_margin"
    tools:context="com.example.android.stockkeepingassistant.EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview"/>

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/small_margin">

            <!-- Product image container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Prodct image for existing product -->
                <ImageView
                    android:id="@+id/editor_product_image"
                    android:layout_width="@dimen/product_image_view_dims"
                    android:layout_height="@dimen/product_image_view_dims"
                    tools:src="@drawable/mech_pencil"/>

                <!-- Upload product image prompt -->
                <Button
                    android:id="@+id/editor_upload_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="uploadProductImageClick"
                    android:text="@string/editor_upload_product_image"/>

            </LinearLayout>

            <!-- Name field -->
            <EditText
                android:id="@+id/editor_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"/>

            <!-- Product quantity container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/editor_quantity_decrement"
                    android:layout_width="@dimen/quantity_modifiers_button_width"
                    android:layout_height="wrap_content"
                    android:onClick="decreaseQuantity"
                    android:text="@string/editor_quantity_decrement"/>

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/editor_product_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/editor_quantity_increment"
                    android:layout_width="@dimen/quantity_modifiers_button_width"
                    android:layout_height="wrap_content"
                    android:onClick="increaseQuantity"
                    android:text="@string/editor_quantity_increment"/>

            </LinearLayout>

            <!-- Product price field -->
            <EditText
                android:id="@+id/editor_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_price"
                android:inputType="number"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Supplier Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier"/>

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Supplier's name field -->
            <EditText
                android:id="@+id/editor_product_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_supplier_name"
                android:inputType="textCapWords"/>
        </LinearLayout>

    </LinearLayout>
    <!-- Supplier contact -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_contact"/>

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_supplier_contact"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spinner_height"
                android:paddingRight="@dimen/medium_margin"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Button to order more from product supplier -->
    <Button
        android:id="@+id/editor_order_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_order_more_button"
        android:onClick="orderMore"
        android:text="@string/editor_order_more"/>

</LinearLayout>
