<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/large_margin">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingEnd="@dimen/small_margin"
                android:paddingStart="@dimen/small_margin">

                <!-- Product image container -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Product image for existing product -->
                    <ImageView
                        android:id="@+id/product_image"
                        android:layout_width="@dimen/product_image_view_dims"
                        android:layout_height="@dimen/product_image_view_dims"
                        android:contentDescription="@string/product_image_cd"
                        android:scaleType="centerCrop"
                        tools:src="@mipmap/ic_launcher" />

                    <!-- Upload product image prompt -->
                    <ImageButton
                        android:id="@+id/product_camera"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/product_camera_cd"
                        android:src="@drawable/ic_camera" />

                </LinearLayout>

                <!-- Name field -->
                <EditText
                    android:id="@+id/product_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords" />

                <!-- Product quantity container -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/product_decrease_quantity"
                        android:layout_width="@dimen/quantity_modifiers_button_width"
                        android:layout_height="wrap_content"
                        android:text="@string/product_decrease_quantity_label" />

                    <!-- Quantity field -->
                    <EditText
                        android:id="@+id/product_quantity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:hint="@string/hint_product_quantity"
                        android:inputType="number" />

                    <Button
                        android:id="@+id/product_increase_quantity"
                        android:layout_width="@dimen/quantity_modifiers_button_width"
                        android:layout_height="wrap_content"
                        android:text="@string/product_increase_quantity_label" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- Product price container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/price" />

            <EditText
                android:id="@+id/product_price"
                style="@style/EditorFieldStyle"
                android:layout_weight="2"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <!-- Supplier Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Gender drop-down spinner -->
                <Spinner
                    android:id="@+id/product_supplier_name"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/spinner_height"
                    android:paddingEnd="@dimen/medium_margin"
                    android:paddingStart="@dimen/medium_margin"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <!-- Supplier contact -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier_contact" />

            <TextView
                android:id="@+id/product_supplier_email"
                style="@style/EditorFieldStyle"
                android:layout_weight="2"
                tools:text="target@gmail.com" />

        </LinearLayout>

        <!-- Button to order more from product supplier -->
        <Button
            android:id="@+id/product_order_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin_order_more_button"
            android:text="@string/product_order_more_label" />

    </LinearLayout>
</ScrollView>