<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for list of products -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.stockkeepingassistant.CatalogActivity">

    <!-- Header panel for product list -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="16dp">

        <!-- Description header label -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/catalog_desc_header"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"/>

        <!-- Quantity header label -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/catalog_quantity_header"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"/>

        <!-- Price header label -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/catalog_price_header"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"/>

    </LinearLayout>

    <!-- List of products -->
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:scrollbars="vertical"/>

    <!-- Empty view for the list -->
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/user_instructions"
        android:textAppearance="?android:textAppearanceMedium"/>

    <!-- New product addition button -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"/>

</RelativeLayout>
